--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Directories
 .venv*
 video/*
-python/__pycache__/
+python/__pycache__
 
 # Files
 .env
 !video/_place your videos in this dir
+!video/extract_frames_to_jpg.py
