--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Enable CUDA
---index-url https://download.pytorch.org/whl/cu118
+--extra-index-url https://download.pytorch.org/whl/cu118
 torch==2.7.0+cu118
 torchaudio==2.7.0+cu118
 torchvision==0.22.0+cu118
